--- a/src/styles/assets/_variables.scss
+++ b/src/styles/assets/_variables.scss
@@ -44,4 +44,4 @@ $border--radius: 2px;
 //                                                                                                                    //
 //--------------------------------------------------------------------------------------------------------------------//
 
-$box--shadow: #fffff;
+$box--shadow: #ffffff;
