--- a/src/container/Cottage/Style.scss
+++ b/src/container/Cottage/Style.scss
@@ -41,7 +41,7 @@
         }
 
         .description {
-            margin: 40px 0;
+            margin: 30px 0;
             color: $color--text-secondary;
             // font-weight: bolder;
             font-style: italic;
@@ -69,7 +69,8 @@
         .selected {
             background-color: $color--primary !important;
             color: #ffffff !important;
-            transition-duration: 0.444s;
+            transition-duration: 0.4s;
+            border: none;
         }
 
         .categories {
