--- a/src/container/Cottage/Style.scss
+++ b/src/container/Cottage/Style.scss
@@ -14,9 +14,12 @@
         border-radius: 8px;
         border: none;
         padding: 10px 15px;
-
+        background-color: rgb(239, 239, 239);
+        z-index: 10;
         p {
             margin: 0;
+            font-weight: bold;
+            color: $color--primary;
         }
         
     }
@@ -27,7 +30,8 @@
     padding: 30px 25px;
     top: -30px;
     background-color: #ffffff;
-    border-radius: 40px;
+    border-radius: 28px;
+    z-index: 10;
 
     .content {
         .title {
@@ -78,3 +82,36 @@
         }
     }
 }
+
+.swiper {
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+  
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
