--- a/src/container/App/Home/style.scss
+++ b/src/container/App/Home/style.scss
@@ -1,3 +1,32 @@
 .Hero {
-    height: 35vh;
+    height: 33vh;
+    background-color: beige;
+}
+
+.cottage-overview {
+    height: 33vh;
+    padding: 30px 25px;
+
+    .cover {
+        height: 200px;
+        width: 55%;
+        display: flex;
+        flex-direction: column-reverse;
+
+        .cover-img {
+            height: 100%;
+            width: 100%;
+            border-radius: 8px;
+            object-fit: cover;
+        }
+
+        .cover-title {
+            position: absolute;
+            padding: 5px;
+            margin: 10px;
+            background-color: white;
+            border-radius: 8px;
+        }
+    }
+
 }
