--- a/src/container/App/Home/style.scss
+++ b/src/container/App/Home/style.scss
@@ -8,7 +8,7 @@
     padding: 30px 25px;
 
     .cover {
-        height: 200px;
+        height: 250px;
         width: 55%;
         display: flex;
         flex-direction: column-reverse;
@@ -28,5 +28,16 @@
             border-radius: 8px;
         }
     }
+}
 
+.flex {
+    display: flex;
+}
+
+.right {
+    padding-left: 25px;
+}
+
+.reverse {
+    flex-direction: row-reverse;
 }
