--- a/src/container/App/Home/style.scss
+++ b/src/container/App/Home/style.scss
@@ -4,12 +4,11 @@
 }
 
 .cottage-overview {
-    height: 33vh;
+    height: 32vh;
     padding: 30px 25px;
 
     .cover {
-        height: 250px;
-        width: 55%;
+        width: 60%;
         display: flex;
         flex-direction: column-reverse;
 
@@ -28,10 +27,18 @@
             border-radius: 8px;
         }
     }
+
+    .info {
+        width: 40%;
+        .title {
+            margin-top: 0;
+        }
+    }
 }
 
-.flex {
+.link-container {
     display: flex;
+    height: 100%;
 }
 
 .right {
