--- a/src/container/App/Home/style.scss
+++ b/src/container/App/Home/style.scss
@@ -1,30 +1,30 @@
-.Hero {
-    height: 33vh;
-    background-color: beige;
+@import '../../../styles/assets/variables';
+
+.App-header {
+    .Hero {
+        height: 33vh;
+        background-color: beige;
+    }    
+}
+
+.cottage-section-title {
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 10px;
 }
 
 .cottage-overview {
     height: 32vh;
-    padding: 30px 25px;
+    padding: 20px 40px;
 
     .cover {
-        width: 60%;
-        display: flex;
-        flex-direction: column-reverse;
-
+        width: 50%;
         .cover-img {
-            height: 100%;
+            height: 70%;
             width: 100%;
             border-radius: 8px;
             object-fit: cover;
-        }
-
-        .cover-title {
-            position: absolute;
-            padding: 5px;
-            margin: 10px;
-            background-color: white;
-            border-radius: 8px;
         }
     }
 
@@ -32,17 +32,15 @@
         width: 40%;
         .title {
             margin-top: 0;
+            margin-bottom: 10px;
         }
     }
 }
 
 .link-container {
     display: flex;
+    justify-content: space-between;
     height: 100%;
-}
-
-.right {
-    padding-left: 25px;
 }
 
 .reverse {
