--- a/src/container/App/Home/style.scss
+++ b/src/container/App/Home/style.scss
@@ -3,8 +3,13 @@
 .App-header {
     .Hero {
         height: 30vh;
-        background-color: beige;
-    }    
+        background-color: #013125;
+        color: white;
+
+        @media (min-width: 900px) {
+            height: 45vh;
+        }
+    }
 }
 
 .cottage-section-title {
@@ -21,10 +26,18 @@
     .cover {
         width: 50%;
         .cover-img {
-            height: 70%;
+            height: 100%;
             width: 100%;
             border-radius: 8px;
             object-fit: cover;
+
+            @media (min-width: 900px) {
+                height: 100%;
+            }
+        }
+
+        @media (min-width: 900px) {
+            width: 40%;
         }
     }
 
@@ -33,6 +46,10 @@
         .title {
             margin-top: 0;
             margin-bottom: 10px;
+        }
+
+        @media (min-width: 900px) {
+            width: 50%;
         }
     }
 }
