Refactor hero banner

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,8 @@
+@import "./styles/assets/variables";
+
 body {
   margin: 0;
+  background-color: $color--light;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
