--- a/src/styles/assets/_mixins.scss
+++ b/src/styles/assets/_mixins.scss
@@ -9,11 +9,21 @@
 @mixin h1 {
   @include font-primary();
   margin: 0;
+  margin-bottom: 12px;
+}
+
+@mixin h2 {
+  @include font-primary();
+  margin: 0;
   margin-bottom: 15px;
 }
 
 h1, .asH1 {
   @include h1();
+}
+
+h2, .asH2 {
+  @include h2();
 }
 
 a {
