Implement hero data from api and css fixes and updates

--- a/src/container/App/Home/style.scss
+++ b/src/container/App/Home/style.scss
@@ -28,7 +28,7 @@
         .cover-img {
             height: 100%;
             width: 100%;
-            border-radius: 8px;
+            border-radius: $border--radius-1;
             object-fit: cover;
 
             @media (min-width: 900px) {
