--- a/src/styles/assets/_variables.scss
+++ b/src/styles/assets/_variables.scss
@@ -39,7 +39,10 @@ $color--success: #ffffff;
 //--------------------------------------------------------------------------------------------------------------------//
 
 $border--color: #ffffff;
-$border--radius: 8px;
+
+$border--radius-0: 5px;
+$border--radius-1: 8px;
+$border--radius-2: 11px;
 
 
 //--------------------------------------------------------------------------------------------------------------------//
