Removed navbar refactor hero Refactor card cottage

--- a/src/container/App/Home/style.scss
+++ b/src/container/App/Home/style.scss
@@ -19,47 +19,24 @@
     padding-top: 10px;
 }
 
-.cottage-overview {
-    height: 32vh;
-    padding: 20px 40px;
 
-    .cover {
-        width: 50%;
-        .cover-img {
-            height: 100%;
-            width: 100%;
-            border-radius: $border--radius-1;
-            object-fit: cover;
-
-            @media (min-width: 900px) {
-                height: 100%;
-            }
-        }
-
-        @media (min-width: 900px) {
-            width: 40%;
-        }
-    }
-
-    .info {
-        width: 40%;
-        .title {
-            margin-top: 0;
-            margin-bottom: 10px;
-        }
-
-        @media (min-width: 900px) {
-            width: 50%;
-        }
-    }
-}
-
-.link-container {
+.card-cottages {
     display: flex;
-    justify-content: space-between;
-    height: 100%;
-}
+    flex-direction: column;
+    width: 100%;
+    flex-wrap: wrap;
 
-.reverse {
-    flex-direction: row-reverse;
+    .cottage-overview {
+        height: 50vh;
+        min-width: 100%;
+    
+        @media (min-width: 1024px) {
+            height: 100vh;
+            min-width: 50%;
+        }
+    }
+
+    @media (min-width: 1024px) {
+        flex-direction: row;
+    }
 }
