--- a/src/styles/assets/_variables.scss
+++ b/src/styles/assets/_variables.scss
@@ -55,3 +55,7 @@ $box--shadow: #ffffff;
 $image-brightness-0: brightness(25%);
 $image-brightness-1: brightness(50%);
 $image-brightness-2: brightness(75%);
+
+$image-blur-0: blur(2px);
+$image-blur-1: blur(4px);
+$image-blur-2: blur(6px);
