--- a/src/styles/assets/_variables.scss
+++ b/src/styles/assets/_variables.scss
@@ -4,7 +4,7 @@
 //                                                                                                                    //
 //--------------------------------------------------------------------------------------------------------------------//
 
-$font--primary: 'Helvetica';
+$font--primary: 'Montserrat';
 $font--secondary: '';
 $font--error: '';
 
