--- a/src/container/Cottage/Style.scss
+++ b/src/container/Cottage/Style.scss
@@ -20,18 +20,30 @@
         border: none;
         padding: 10px 15px;
         background-color: rgb(239, 239, 239);
-        z-index: 10;
+        z-index: 2;
         p {
             margin: 0;
             font-weight: bold;
             color: $color--primary;
         }
-        
+
     }
 
     @media (min-width: 900px) {
         height: 60vh;
     }
+}
+
+.landscape {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+
+  .back-button {
+    display: none;
+  }
+
+  z-index: 11;
 }
 
 .container {
@@ -94,12 +106,12 @@
     height: 100%;
     z-index: 0;
   }
-  
+
   .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-  
+
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
@@ -114,7 +126,7 @@
     -webkit-align-items: center;
     align-items: center;
   }
-  
+
   .swiper-slide img {
     display: block;
     width: 100%;
