--- a/src/container/Cottage/Style.scss
+++ b/src/container/Cottage/Style.scss
@@ -1,10 +1,5 @@
 @import "../../styles/assets/variables";
 
-.top {
-    display: flex;
-    justify-content: space-between;
-}
-
 .cover-image {
     height: 40vh;
     img {
@@ -26,7 +21,7 @@
             font-weight: bold;
             color: $color--primary;
         }
-        
+
     }
 
     @media (min-width: 900px) {
@@ -36,57 +31,47 @@
 
 .container {
     position: relative;
-    padding: 30px 25px;
-    top: -30px;
+    padding: 20px 20px;
     background-color: #ffffff;
-    border-radius: 28px;
-    z-index: 10;
 
     .content {
+      .top {
+        padding-bottom: 1rem;
+
         h1 {
-            margin-bottom: 10px;
-            color: $color--text;
+          margin-bottom: 0.1rem;
         }
-        span {
-            color: $color--text;
-        }
+      }
 
         .description {
-            margin: 30px 0;
-            color: $color--text-secondary;
-        }
-    }
+          ul {
+            font-size: 1rem;
+            padding-left: 1rem;
+            margin-top: 0;
 
-    .categories-info {
-
-        .buttons {
-            display: flex;
-            justify-content: space-between;
-
-            button {
-                background-color: rgb(226, 226, 226);
-                border-radius: 10px;
-                padding: 13px 15px;
-                border: none;
-
-                color: $color--primary;
-                font-weight: bold;
-                font-size: 15px;
+            li {
+                margin-bottom: 0.4rem;
             }
-        }
-
-        .selected {
-            background-color: $color--primary !important;
-            color: #ffffff !important;
-            transition-duration: 0.4s;
-            border: none;
-        }
-
-        .categories {
-            margin: 40px 0;
-            white-space: pre-wrap;
+          }
+          p {
+            max-height: 25vh;
+            overflow: scroll;
+            margin-bottom: 1.5rem;
+          }
         }
     }
+
+  .floor {
+    padding: 1rem;
+    border: 2px solid #D9D9D9;
+    margin-bottom: 0.5rem;
+
+    h4 {
+      margin-top: 0;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+  }
 }
 
 .swiper {
@@ -94,12 +79,12 @@
     height: 100%;
     z-index: 0;
   }
-  
+
   .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
-  
+
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
@@ -114,7 +99,7 @@
     -webkit-align-items: center;
     align-items: center;
   }
-  
+
   .swiper-slide img {
     display: block;
     width: 100%;
