--- a/src/container/Cottage/Style.scss
+++ b/src/container/Cottage/Style.scss
@@ -65,6 +65,7 @@
     padding: 1rem;
     border: 2px solid #D9D9D9;
     margin-bottom: 0.5rem;
+    white-space: break-spaces;
 
     h4 {
       margin-top: 0;
